<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBasic"
    tools:context=".SignupDoctor2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signupDoctor2_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/emailTextSignupDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditSignupDoctor"
        app:layout_constraintStart_toEndOf="@+id/signupDoctor2_toolbar"
        app:layout_constraintStart_toStartOf="@+id/emailEditSignupDoctor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/emailEditSignupDoctor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/passTextSignupDoctor"
        app:layout_constraintStart_toEndOf="@+id/signupDoctor2_toolbar"
        app:layout_constraintStart_toStartOf="@+id/passTextSignupDoctor"
        app:layout_constraintTop_toBottomOf="@+id/emailTextSignupDoctor" />

    <TextView
        android:id="@+id/passTextSignupDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/passEditSignupDoctor"
        app:layout_constraintStart_toStartOf="@+id/passEditSignupDoctor"
        app:layout_constraintTop_toBottomOf="@+id/emailEditSignupDoctor" />

    <EditText
        android:id="@+id/passEditSignupDoctor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/passConfTextSignupDoctor"
        app:layout_constraintStart_toStartOf="@+id/passConfTextSignupDoctor"
        app:layout_constraintTop_toBottomOf="@+id/passTextSignupDoctor" />

    <TextView
        android:id="@+id/passConfTextSignupDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/passConfEditSignupDoctor"
        app:layout_constraintStart_toStartOf="@+id/passConfEditSignupDoctor"
        app:layout_constraintTop_toBottomOf="@+id/passEditSignupDoctor" />

    <EditText
        android:id="@+id/passConfEditSignupDoctor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/confPasswordHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/passConfTextSignupDoctor" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="next2"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passConfEditSignupDoctor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prog2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>